add blocks with clients and catalog

--- a/index.html
+++ b/index.html
@@ -106,8 +106,211 @@
                 <div class="button-item">Терміни Виготовлення</div>
             </div>
         </div>
+
+        <div class="clients-block">
+            <div class="title">
+                <h2>НАШІ КЛІЄНТИ</h2>
+            </div>
+            <div class="clients-logos">
+                <div class="logo-client"><img src="assets/client-1.png" alt="ПЕРОН"></div>
+                <div class="logo-client"><img src="assets/client-2.png" alt="Клара"></div>
+                <div class="logo-client"><img src="assets/client-3.png" alt="ФАБРИКА КАВИ"></div>
+                <div class="logo-client"><img src="assets/client-4.png" alt="bulochna"></div>
+                <div class="logo-client"><img src="assets/client-5.png" alt="Bakery"></div>
+                <div class="logo-client"><img src="assets/client-6.png" alt="ШО ТУТ?"></div>
+                <div class="logo-client"><img src="assets/client-7.png" alt="Caffeine"></div>
+            </div>
+        </div>
+
+        <div class="catalog-block">
+            <div class="title">
+                <h2>КАТАЛОГ</h2>
+            </div>
+            <h2>Пакети для Випічки</h2>
+            <div class="tiles">
+                <div class="tile">
+                    <div class="card">
+                        <div class="side front">
+                            <img src="assets/catalog-1.png" alt="Package 1">
+                        </div>
+                        <div class="side back">
+                            <div class="description">
+                                <ul>
+                                    <li>Щільність 40-50 г/м²</li>
+                                    <li>З власним дизайном</li>
+                                    <li>Брендовані від 10000 шт.</li>
+                                    <li>100 шт/упаковка</li>
+                                </ul>
+                                <div class="contact-button">
+                                    <button>Зв'язатись</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="card">
+                        <div class="side front">
+                            <img src="assets/catalog-2.png" alt="Package 2">
+
+                        </div>
+                        <div class="side back">
+                            <div class="description">
+                                <ul>
+                                    <li>Щільність 40-50 г/м²</li>
+                                    <li>З власним дизайном</li>
+                                    <li>Брендовані від 10000 шт.</li>
+                                    <li>100 шт/упаковка</li>
+                                </ul>
+                                <div class="contact-button">
+                                    <button>Зв'язатись</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="card">
+                        <div class="side front">
+                            <img src="assets/catalog-3.png" alt="Package 3">
+                        </div>
+                        <div class="side back">
+                            <div class="description">
+                                <ul>
+                                    <li>Щільність 40-50 г/м²</li>
+                                    <li>З власним дизайном</li>
+                                    <li>Брендовані від 10000 шт.</li>
+                                    <li>100 шт/упаковка</li>
+                                </ul>
+                                <div class="contact-button">
+                                    <button>Зв'язатись</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="card">
+                        <div class="side front">
+                            <img src="assets/catalog-4.png" alt="Package 4">
+                        </div>
+                        <div class="side back">
+                            <div class="description">
+                                <ul>
+                                    <li>Щільність 40-50 г/м²</li>
+                                    <li>З власним дизайном</li>
+                                    <li>Брендовані від 10000 шт.</li>
+                                    <li>100 шт/упаковка</li>
+                                </ul>
+                                <div class="contact-button">
+                                    <button>Зв'язатись</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tiles">
+                <div class="tile">
+                    <div class="card">
+                        <div class="side front">
+                            <img src="assets/catalog-5.png" alt="Package 1">
+                        </div>
+                        <div class="side back">
+                            <div class="description">
+                                <ul>
+                                    <li>Щільність 40-50 г/м²</li>
+                                    <li>З власним дизайном</li>
+                                    <li>Брендовані від 10000 шт.</li>
+                                    <li>100 шт/упаковка</li>
+                                </ul>
+                                <div class="contact-button">
+                                    <button>Зв'язатись</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="card">
+                        <div class="side front">
+                            <img src="assets/catalog-6.png" alt="Package 2">
+
+                        </div>
+                        <div class="side back">
+                            <div class="description">
+                                <ul>
+                                    <li>Щільність 40-50 г/м²</li>
+                                    <li>З власним дизайном</li>
+                                    <li>Брендовані від 10000 шт.</li>
+                                    <li>100 шт/упаковка</li>
+                                </ul>
+                                <div class="contact-button">
+                                    <button>Зв'язатись</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="card">
+                        <div class="side front">
+                            <img src="assets/catalog-7.png" alt="Package 3">
+                        </div>
+                        <div class="side back">
+                            <div class="description">
+                                <ul>
+                                    <li>Щільність 40-50 г/м²</li>
+                                    <li>З власним дизайном</li>
+                                    <li>Брендовані від 10000 шт.</li>
+                                    <li>100 шт/упаковка</li>
+                                </ul>
+                                <div class="contact-button">
+                                    <button>Зв'язатись</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="card">
+                        <div class="side front">
+                            <img src="assets/catalog-8.png" alt="Package 4">
+                        </div>
+                        <div class="side back">
+                            <div class="description">
+                                <ul>
+                                    <li>Щільність 40-50 г/м²</li>
+                                    <li>З власним дизайном</li>
+                                    <li>Брендовані від 10000 шт.</li>
+                                    <li>100 шт/упаковка</li>
+                                </ul>
+                                <div class="contact-button">
+                                    <button>Зв'язатись</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
+
+
+<div id="modal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <h2>Для замовлення та більш детальної інформації</h2>
+        <p>переходьте в наш телеграм за <strong>QR-кодом</strong>, за <em>номером телефону</em> або за допомогою кнопки
+            <em>"Зв'язатись"</em>, що є на звороті кожної картки товару.</p>
+        <div class="qr-code">
+            <img src="assets/qr_code.png" alt="QR Code">
+            <p>+380951546753</p>
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
