to show and explain what we will do

--- a/index.html
+++ b/index.html
@@ -29,98 +29,98 @@
 
 <main>
     <div class="custom-container">
-        <div class="main-content">
-            <div class="sidebar">
-                <div class="title">
-                    <h3>КАТАЛОГ</h3>
-                </div>
-                <div class="sidebar-card">
-                    <div class="sidebar-image">
-                        <img src="assets/Group%203.png" alt="sidebar_image1">
-                    </div>
-                    <div class="sidebar-text">
-                        <p>Пакети паперові для випічки</p>
-                    </div>
-                </div>
+<!--        <div class="main-content">-->
+<!--            <div class="sidebar">-->
+<!--                <div class="title">-->
+<!--                    <h3>КАТАЛОГ</h3>-->
+<!--                </div>-->
+<!--                <div class="sidebar-card">-->
+<!--                    <div class="sidebar-image">-->
+<!--                        <img src="assets/Group%203.png" alt="sidebar_image1">-->
+<!--                    </div>-->
+<!--                    <div class="sidebar-text">-->
+<!--                        <p>Пакети паперові для випічки</p>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <div class="sidebar-card">
-                    <div class="sidebar-image">
-                        <img src="assets/Intersect.png" alt="sidebar_image2">
-                    </div>
-                    <div class="sidebar-text">
-                        <p>Стаканчики для напоїв</p>
-                    </div>
-                </div>
+<!--                <div class="sidebar-card">-->
+<!--                    <div class="sidebar-image">-->
+<!--                        <img src="assets/Intersect.png" alt="sidebar_image2">-->
+<!--                    </div>-->
+<!--                    <div class="sidebar-text">-->
+<!--                        <p>Стаканчики для напоїв</p>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <div class="sidebar-card">
-                    <div class="sidebar-image">
-                        <img src="assets/1.png" alt="sidebar_image3">
-                    </div>
-                    <div class="sidebar-text">
-                        <p>Аксесуари для напоїв</p>
-                    </div>
-                </div>
-            </div>
-            <div class="image-block">
-                <div class="title">
-                    <h3>ВСЕ, ЩО ПОТРІБНО ДЛЯ ТВОЄЇ КАВ’ЯРНІ ТУТ</h3>
-                </div>
-                <div class="block">
-                    <div class="grid-img">
-                        <div>
-                            <img src="assets/img1.png" alt="image_1">
-                            <div class="image-row">
-                                <img src="assets/img2.png" alt="image_2">
-                                <img src="assets/img6.png" alt="image_6">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid-img">
-                        <img src="assets/img3.png" alt="image_3">
-                        <div class="image-row">
-                            <img src="assets/img7.png" alt="image_2">
-                            <img src="assets/img5.png" alt="image_6">
-                        </div>
-                        <img src="assets/img4.png" alt="image_4">
-                    </div>
-                </div>
-            </div>
-        </div>
+<!--                <div class="sidebar-card">-->
+<!--                    <div class="sidebar-image">-->
+<!--                        <img src="assets/1.png" alt="sidebar_image3">-->
+<!--                    </div>-->
+<!--                    <div class="sidebar-text">-->
+<!--                        <p>Аксесуари для напоїв</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="image-block">-->
+<!--                <div class="title">-->
+<!--                    <h3>ВСЕ, ЩО ПОТРІБНО ДЛЯ ТВОЄЇ КАВ’ЯРНІ ТУТ</h3>-->
+<!--                </div>-->
+<!--                <div class="block">-->
+<!--                    <div class="grid-img">-->
+<!--                        <div>-->
+<!--                            <img src="assets/img1.png" alt="image_1">-->
+<!--                            <div class="image-row">-->
+<!--                                <img src="assets/img2.png" alt="image_2">-->
+<!--                                <img src="assets/img6.png" alt="image_6">-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="grid-img">-->
+<!--                        <img src="assets/img3.png" alt="image_3">-->
+<!--                        <div class="image-row">-->
+<!--                            <img src="assets/img7.png" alt="image_2">-->
+<!--                            <img src="assets/img5.png" alt="image_6">-->
+<!--                        </div>-->
+<!--                        <img src="assets/img4.png" alt="image_4">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="second-part">
-            <div class="background-container">
-                <div class="overlay-content">
-                    <h2>Твой контент здесь</h2>
-                    <p>Этот текст и блоки будут размещены поверх фонового изображения</p>
-                </div>
-            </div>
-        </div>
+<!--        <div class="second-part">-->
+<!--            <div class="background-container">-->
+<!--                <div class="overlay-content">-->
+<!--                    <h2>Твой контент здесь</h2>-->
+<!--                    <p>Этот текст и блоки будут размещены поверх фонового изображения</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="question-block">
-            <div class="title">
-                <h3>ВІДПОВІДІ НА ЗАПИТАННЯ</h3>
-            </div>
-            <div class="buttons-container">
-                <div class="button-item">Оплата і доставка</div>
-                <div class="button-item">Брендована продукція</div>
-                <div class="button-item">Терміни Виготовлення</div>
-            </div>
-        </div>
+<!--        <div class="question-block">-->
+<!--            <div class="title">-->
+<!--                <h3>ВІДПОВІДІ НА ЗАПИТАННЯ</h3>-->
+<!--            </div>-->
+<!--            <div class="buttons-container">-->
+<!--                <div class="button-item">Оплата і доставка</div>-->
+<!--                <div class="button-item">Брендована продукція</div>-->
+<!--                <div class="button-item">Терміни Виготовлення</div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="clients-block">
-            <div class="title">
-                <h2>НАШІ КЛІЄНТИ</h2>
-            </div>
-            <div class="clients-logos">
-                <div class="logo-client"><img src="assets/client-1.png" alt="ПЕРОН"></div>
-                <div class="logo-client"><img src="assets/client-2.png" alt="Клара"></div>
-                <div class="logo-client"><img src="assets/client-3.png" alt="ФАБРИКА КАВИ"></div>
-                <div class="logo-client"><img src="assets/client-4.png" alt="bulochna"></div>
-                <div class="logo-client"><img src="assets/client-5.png" alt="Bakery"></div>
-                <div class="logo-client"><img src="assets/client-6.png" alt="ШО ТУТ?"></div>
-                <div class="logo-client"><img src="assets/client-7.png" alt="Caffeine"></div>
-            </div>
-        </div>
+<!--        <div class="clients-block">-->
+<!--            <div class="title">-->
+<!--                <h2>НАШІ КЛІЄНТИ</h2>-->
+<!--            </div>-->
+<!--            <div class="clients-logos">-->
+<!--                <div class="logo-client"><img src="assets/client-1.png" alt="ПЕРОН"></div>-->
+<!--                <div class="logo-client"><img src="assets/client-2.png" alt="Клара"></div>-->
+<!--                <div class="logo-client"><img src="assets/client-3.png" alt="ФАБРИКА КАВИ"></div>-->
+<!--                <div class="logo-client"><img src="assets/client-4.png" alt="bulochna"></div>-->
+<!--                <div class="logo-client"><img src="assets/client-5.png" alt="Bakery"></div>-->
+<!--                <div class="logo-client"><img src="assets/client-6.png" alt="ШО ТУТ?"></div>-->
+<!--                <div class="logo-client"><img src="assets/client-7.png" alt="Caffeine"></div>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <div class="catalog-block">
             <div class="title">
@@ -142,7 +142,7 @@
                                     <li>100 шт/упаковка</li>
                                 </ul>
                                 <div class="contact-button">
-                                    <button>Зв'язатись</button>
+                                    <button><a href="https://t.me/curly_genie">Зв'язатись</a></button>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +163,7 @@
                                     <li>100 шт/упаковка</li>
                                 </ul>
                                 <div class="contact-button">
-                                    <button>Зв'язатись</button>
+                                    <button><a href="https://t.me/curly_genie">Зв'язатись</a></button>
                                 </div>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                                     <li>100 шт/упаковка</li>
                                 </ul>
                                 <div class="contact-button">
-                                    <button>Зв'язатись</button>
+                                    <button><a href="https://t.me/curly_genie">Зв'язатись</a></button>
                                 </div>
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                                     <li>100 шт/упаковка</li>
                                 </ul>
                                 <div class="contact-button">
-                                    <button>Зв'язатись</button>
+                                    <button><a href="https://t.me/curly_genie">Зв'язатись</a></button>
                                 </div>
                             </div>
                         </div>
@@ -226,7 +226,7 @@
                                     <li>100 шт/упаковка</li>
                                 </ul>
                                 <div class="contact-button">
-                                    <button>Зв'язатись</button>
+                                    <button><a href="https://t.me/curly_genie">Зв'язатись</a></button>
                                 </div>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                                     <li>100 шт/упаковка</li>
                                 </ul>
                                 <div class="contact-button">
-                                    <button>Зв'язатись</button>
+                                    <button><a href="https://t.me/curly_genie">Зв'язатись</a></button>
                                 </div>
                             </div>
                         </div>
@@ -267,7 +267,7 @@
                                     <li>100 шт/упаковка</li>
                                 </ul>
                                 <div class="contact-button">
-                                    <button>Зв'язатись</button>
+                                    <button><a href="https://t.me/curly_genie">Зв'язатись</a></button>
                                 </div>
                             </div>
                         </div>
@@ -287,13 +287,111 @@
                                     <li>100 шт/упаковка</li>
                                 </ul>
                                 <div class="contact-button">
-                                    <button>Зв'язатись</button>
+                                    <button><a href="https://t.me/curly_genie">Зв'язатись</a></button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+<!--            <h2>Стаканчики для напоїв</h2>-->
+<!--            <div class="tiles">-->
+<!--                <div class="tile">-->
+<!--                    <div class="card">-->
+<!--                        <div class="side front">-->
+<!--                            <div class="color-selection">-->
+<!--                                <span class="color" style="background-color: #D7DF01;" data-color="yellow"></span>-->
+<!--                                <span class="color" style="background-color: #3B170B;" data-color="brown"></span>-->
+<!--                                <span class="color" style="background-color: #0B610B;" data-color="green"></span>-->
+<!--                                <span class="color" style="background-color: #292421;" data-color="black"></span>-->
+<!--                                <span class="color" style="background-color: #088A85;" data-color="cyan"></span>-->
+<!--                                <span class="color" style="background-color: #8A0808;" data-color="red"></span>-->
+<!--                            </div>-->
+<!--                            <img src="assets/cup-red.png" height="201" width="201" alt="Стаканчик"/>-->
+<!--                            <div class="cup-info">-->
+<!--                                <p>Стакан гофрований</p>-->
+<!--                                <p>110мл/175мл/275мл/400мл</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="side back">-->
+<!--                            <div class="description">-->
+<!--                                <ul>-->
+<!--                                    <li>Щільність 40-50 г/м²</li>-->
+<!--                                    <li>З власним дизайном</li>-->
+<!--                                    <li>Брендовані від 10000 шт.</li>-->
+<!--                                    <li>100 шт/упаковка</li>-->
+<!--                                </ul>-->
+<!--                                <div class="contact-button">-->
+<!--                                    <button>Зв'язатись</button>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="tile">-->
+<!--                    <div class="card">-->
+<!--                        <div class="side front">-->
+<!--                            <img src="assets/catalog-6.png" alt="Package 2">-->
+
+<!--                        </div>-->
+<!--                        <div class="side back">-->
+<!--                            <div class="description">-->
+<!--                                <ul>-->
+<!--                                    <li>Щільність 40-50 г/м²</li>-->
+<!--                                    <li>З власним дизайном</li>-->
+<!--                                    <li>Брендовані від 10000 шт.</li>-->
+<!--                                    <li>100 шт/упаковка</li>-->
+<!--                                </ul>-->
+<!--                                <div class="contact-button">-->
+<!--                                    <button>Зв'язатись</button>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="tile">-->
+<!--                    <div class="card">-->
+<!--                        <div class="side front">-->
+<!--                            <img src="assets/catalog-7.png" alt="Package 3">-->
+<!--                        </div>-->
+<!--                        <div class="side back">-->
+<!--                            <div class="description">-->
+<!--                                <ul>-->
+<!--                                    <li>Щільність 40-50 г/м²</li>-->
+<!--                                    <li>З власним дизайном</li>-->
+<!--                                    <li>Брендовані від 10000 шт.</li>-->
+<!--                                    <li>100 шт/упаковка</li>-->
+<!--                                </ul>-->
+<!--                                <div class="contact-button">-->
+<!--                                    <button>Зв'язатись</button>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="tile">-->
+<!--                    <div class="card">-->
+<!--                        <div class="side front">-->
+<!--                            <img src="assets/catalog-8.png" alt="Package 4">-->
+<!--                        </div>-->
+<!--                        <div class="side back">-->
+<!--                            <div class="description">-->
+<!--                                <ul>-->
+<!--                                    <li>Щільність 40-50 г/м²</li>-->
+<!--                                    <li>З власним дизайном</li>-->
+<!--                                    <li>Брендовані від 10000 шт.</li>-->
+<!--                                    <li>100 шт/упаковка</li>-->
+<!--                                </ul>-->
+<!--                                <div class="contact-button">-->
+<!--                                    <button>Зв'язатись</button>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!---->
         </div>
     </div>
 </main>
