--- a/index.html
+++ b/index.html
@@ -66,25 +66,9 @@
                 <div class="title">
                     <h3>ВСЕ, ЩО ПОТРІБНО ДЛЯ ТВОЄЇ КАВ’ЯРНІ ТУТ</h3>
                 </div>
-<!--                <div class="block">-->
-<!--                    <div class="grid-img">-->
-<!--                        <div>-->
-<!--                            <img src="assets/img1.png" alt="image_1">-->
-<!--                            <div class="image-row">-->
-<!--                                <img src="assets/img2.png" alt="image_2">-->
-<!--                                <img src="assets/img6.png" alt="image_6">-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="grid-img">-->
-<!--                        <img src="assets/img3.png" alt="image_3">-->
-<!--                        <div class="image-row">-->
-<!--                            <img src="assets/img7.png" alt="image_2">-->
-<!--                            <img src="assets/img5.png" alt="image_6">-->
-<!--                        </div>-->
-<!--                        <img src="assets/img4.png" alt="image_4">-->
-<!--                    </div>-->
-<!--                </div> -->
+                <div class="block">
+                    <img src="assets/main-picture.png" alt="main">
+                </div>
             </div>
         </div>
 
