become to do mobile version

--- a/index.html
+++ b/index.html
@@ -1196,6 +1196,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="second-line">
                     <div class="button-item" onclick="expandButton(this)">
                         <span class="button-title">Терміни Виготовлення</span>
@@ -1834,6 +1835,56 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="tile_hide">
+                        <div class="card">
+                            <div class="side front">
+                                <div class="flex-block_new-cup">
+                                    <div>
+                                        <img src="assets/plastic_cocktail_glass.png" alt="Cup"
+                                             class="cup-image_new-cup">
+                                    </div>
+                                    <div>
+                                        <p style="text-align: center">Стакан купольний з кришкою<br>250мл/320мл/420мл
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="side back">
+                                <div class="description">
+                                    <ul>
+                                        <li>
+                                            <div class="li-block">
+                                                <div><img src="assets/Animation%20-%201723209070761.gif"
+                                                          style="width: 25px"
+                                                          alt="icon-check"></div>
+                                                <p>Для холодних напоїв</p></div>
+                                        </li>
+                                        <li>
+                                            <div class="li-block">
+                                                <div><img src="assets/Animation%20-%201723209070761.gif"
+                                                          style="width: 25px"
+                                                          alt="icon-check"></div>
+                                                <p>50 або 100 шт/упаковка</p></div>
+                                        </li>
+                                        <li>
+                                            <div class="li-block">
+                                                <div><img src="assets/Animation%20-%201723209070761.gif"
+                                                          style="width: 25px"
+                                                          alt="icon-check"></div>
+                                                <p>Без дизайну</p></div>
+                                        </li>
+                                    </ul>
+                                    <div class="contact-button">
+                                        <button class="custom-button"><a href="https://t.me/curly_genie"
+                                                                         target="_blank">Зв'язатись</a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
 
 
                 </div>
